test/compilable/dtoh_CPPNamespaceDeclaration.d
/*
REQUIRED_ARGS: -HC -c -o-
PERMUTE_ARGS:
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler

#pragma once

#include <stddef.h>
#include <stdint.h>


namespace nameSpace
{
    extern void fn();

    namespace nameSpace2
    {
        extern void fn2();

    }
    extern double identity(double _param_0);

}
---
*/

extern(C++, "nameSpace")
{
    void fn() {}

    extern(C++, nameSpace2)
    {
        void fn2() {}
    }

    double identity(double) { return _param_0; }
}
